--- a/style.css
+++ b/style.css
@@ -20,3 +20,10 @@
 #shoes img{
    width: 90px;
 }
+.btn{
+   background-color: rgba(255, 88, 155, 1);
+}
+#subcribe{
+   background-color: #FEEAE9;
+   height: 300px;
+}
